# rsbrowsers

./: Cargo.toml  README.md  Taskfile.yml  browsers.pyi  deny.toml  pyproject.toml
.github/workflows/: CI.yml
examples/: all_browsers.py  get_firefox.py  launch_chrome.py  pyproject.toml
rsbrowsers/: Cargo.toml  README.md
rsbrowsers/src/: lib.rs
src/: lib.rs
tests/: test_detect.py
