[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rsbrowsers"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "Cargo.toml" }, { file = "src/*.rs" }, { file = "rsbrowsers/Cargo.toml" }, { file = "rsbrowsers/src/*.rs" }]

[tool.uv.workspace]
members = [
    "examples",
]

[tool.pytest.ini_options]
addopts = """\
    -vv \
    -s \
"""
