[package]
name = "rsbrowsers"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["browser", "launcher"]
categories = ["config", "development-tools"]

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.6.1"

[target.'cfg(target_os = "windows")'.dependencies]
pelite = "0.10.0"
winreg = "0.55.0"

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop-desktop-entry = "0.5.2"
lazy_static = "1.4.0"
regex = "1.10.5"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
phf = { version = "0.11.2", features = ["macros"] }

[dependencies]
glob = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
